--- a/k8s/user-service-deployment.yaml
+++ b/k8s/user-service-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: user-service
-        image: your-username/user-service:your-image-tag
+        image: user-service:latest
         ports:
         - containerPort: 8080
